tests/NormalTests/paczka1/small_fuzzy/20447651.err
Error in line 2: rqrsQRqo1LV S154 80,7
Error in line 1: uy1ZHsPLVO S820 62,0
Error in line 3: rqrsQRqo1LV S820 10,0
Error in line 14: jdexhBng9 S820 31,6
Error in line 10: rqrsQRqo1LV S478 21,7
